# yt_chapter_maker

./: .gitignore  README.md  pyproject.toml
docs/: design_doc.md  initial_dd_prompt.md  initial_spec_prompt.md  product_spec.md
src/: __init__.py  exceptions.py  llm_orchestrator.py  main.py  processor.py
